--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@auth/core": "^0.3.0",
+		"@auth/sveltekit": "^0.2.0",
 		"@fontsource/chango": "^4.5.10",
-		"@prisma/client": "^4.8.1",
-		"@tanstack/svelte-query": "^4.22.2",
+		"@next-auth/prisma-adapter": "^1.0.5",
+		"@prisma/client": "^4.9.0",
+		"@tanstack/svelte-query": "^4.22.4",
 		"@trpc/client": "^10.9.0",
 		"@trpc/server": "^10.9.0",
-		"daisyui": "^2.46.1",
-		"prisma": "^4.8.1",
+		"daisyui": "^2.49.0",
+		"prisma": "^4.9.0",
 		"superstruct": "^1.0.3"
 	}
 }
